INTERLOK-3559 Remove refs to destination.